# sembench-data-import

./: .env.example  .gitignore  README.md  config.py  importer.py  pyproject.toml  schema.sql
